src/test/ui/error-codes/E0658.stderr
error[E0658]: repr with 128-bit type is unstable
  --> $DIR/E0658.rs:2:1
   |
LL | / enum Foo {
LL | |     Bar(u64),
LL | | }
   | |_^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/35118
   = help: add #![feature(repr128)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
